deploy/canary/canary.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: canary
  namespace: canary-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - name: canary
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
        ports:
        - containerPort: 8080
