deploy/canary/canary.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary
  namespace: canary-demo
  labels:
    app: canary
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: canary
  selector:
    app: canary
