deploy/canary/canary.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary
  namespace: canary-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
  - host: canary-demo.robertjscott.ca
    http:
      paths:
      - backend:
          serviceName: canary
          servicePort: 80
